resources/testcases_static_checks/tests/negative/isDmfa/higherCyclicTermDeptchRequired.rls
R(!Z, ?X) :- A(?X) .
A(?X) :- R(?X, ?Y), C(?Y) .

@export R :- csv {} .
@export A :- csv {} .
